--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,64 @@
-.calculator {
-    display: grid;
-    grid-template-rows: minmax(80px, auto) repeat(5, 60px);
-    grid-template-columns: repeat(4,60px);
-    justify-content: center;
-    background-color: hsl(220, 6%, 10%);
-    padding: 1.4rem;
-    border-radius: 12px;
-    gap: 0.7rem;
+* {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    font-size: large;
 }
 
-.calculator button{
-    border: none;
-    font-family: inherit;
-    font-size: 1.3rem;
-    font-weight: 500;
-    color: hsl(204, 100%, 50%);
-    background-color: hsl(230, 6%, 20%);
-    border-radius: 10px;
-    cursor: pointer;
-}
-.calculator button:hover{
-    background-color: hsl(230, 6%, 30%);
-}
-
-.span-2{
-    grid-column: span 2;
-}
-
-.calculator .output {
-    font-size: 2rem;
-    background-color: inherit;
+body {
+    height: 100vh;
+    background-color: black;
     color: white;
-    grid-column: 1/-1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-end;
-    word-break: break-all;
-    border-radius: inherit;
 }
 
-.output .prev-display{
-    font-size: 1.3rem;
-    font-weight: 400;
-    color: hsl(0, 0%, 65%);
+.calculator {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 2px;
+}
+
+.calculator button {
+    cursor: pointer;
+    border: none;
+    background-color: rgba(128, 128, 128, 0.9);
+    color: white;
+}
+
+.calculator button:hover {
+    background-color: gray;
+}
+
+.output {
+    grid-column: 1/5;
+}
+
+.clear {
+    grid-column: 1/3;
+    background-color: rgba(232, 232, 25, 0.8);
+}
+
+.clear:hover {
+    background-color: yellow;
+}
+
+.delete {
+    background-color: rgba(255, 0, 0, 0.777);
+}
+
+.delete:hover {
+    background-color: red;
+}
+
+.zero {
+    grid-column: 1/3;
+}
+
+.equal {
+    background-color: rgba(0, 0, 255, 0.725);
+}
+
+.equal:hover {
+    background-color: blue;
 }
