--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
     color: white;
 }
 
+.cur-display {
+    font-size: 40px;
+}
+
 .calculator {
     height: 100%;
     display: grid;
@@ -32,22 +36,28 @@ body {
 
 .output {
     grid-column: 1/5;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    padding-right: 30px;
 }
 
-.clear {
+.calculator button.clear {
     grid-column: 1/3;
     background-color: rgba(232, 232, 25, 0.8);
 }
 
-.clear:hover {
-    background-color: yellow;
+.calculator button.clear:hover {
+    background-color: rgba(232, 232, 25, 0.9);
 }
 
-.delete {
+.calculator button.delete {
     background-color: rgba(255, 0, 0, 0.777);
 }
 
-.delete:hover {
+.calculator button.delete:hover {
     background-color: red;
 }
 
@@ -55,10 +65,10 @@ body {
     grid-column: 1/3;
 }
 
-.equal {
+.calculator button.equal {
     background-color: rgba(0, 0, 255, 0.725);
 }
 
-.equal:hover {
+.calculator button.equal:hover {
     background-color: blue;
 }
